--- a/express/package.json
+++ b/express/package.json
@@ -5,6 +5,8 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.15.2",
-    "express": "^4.14.0"
+    "express": "^4.14.0",
+    "mysql": "^2.11.1",
+    "swig": "^1.4.2"
   }
 }
