--- a/KOA2/package.json
+++ b/KOA2/package.json
@@ -20,6 +20,7 @@
     "karma-jasmine": "^1.0.2",
     "karma-phantomjs-launcher": "^1.0.2",
     "koa": "next",
+    "koa-body": "2",
     "koa-router": "next",
     "koa-static": "^2.0.0",
     "koa-swig": "^2.2.0",
