--- a/KOA2/package.json
+++ b/KOA2/package.json
@@ -20,12 +20,17 @@
     "karma-jasmine": "^1.0.2",
     "karma-phantomjs-launcher": "^1.0.2",
     "koa": "next",
-    "koa-body": "2",
-    "koa-router": "next",
+    "koa-convert": "^1.2.0",
+    "koa-simple-router": "^0.2.0",
     "koa-static": "^2.0.0",
     "koa-swig": "^2.2.0",
-    "mysql": "^2.11.1",
+    "mysql-promise": "^3.1.0",
     "path": "^0.12.7",
     "phantomjs": "^2.1.7+deprecated"
+  },
+  "devDependencies": {
+    "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2",
+    "gulp-uglify": "^2.0.0"
   }
 }
