--- a/KOA2/package.json
+++ b/KOA2/package.json
@@ -9,16 +9,7 @@
     "start": "forever -w app.js && babel-ajax && babel-index"
   },
   "dependencies": {
-    "babel-cli": "^6.18.0",
-    "babel-core": "^6.18.0",
-    "babel-polyfill": "^6.16.0",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-preset-stage-3": "^6.17.0",
     "co": "^4.6.0",
-    "jasmine-core": "^2.5.2",
-    "karma": "^1.3.0",
-    "karma-jasmine": "^1.0.2",
-    "karma-phantomjs-launcher": "^1.0.2",
     "koa": "next",
     "koa-convert": "^1.2.0",
     "koa-simple-router": "^0.2.0",
@@ -26,11 +17,29 @@
     "koa-swig": "^2.2.0",
     "mysql-promise": "^3.1.0",
     "path": "^0.12.7",
-    "phantomjs": "^2.1.7+deprecated"
+    "x-tag": "^1.5.11"
   },
   "devDependencies": {
+    "babel": "^6.5.2",
+    "babel-cli": "^6.18.0",
+    "babel-core": "^6.18.0",
+    "babel-loader": "^6.2.7",
+    "babel-plugin-transform-runtime": "^6.15.0",
+    "babel-polyfill": "^6.16.0",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-stage-3": "^6.17.0",
+    "extract-text-webpack-plugin": "^1.0.1",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
-    "gulp-uglify": "^2.0.0"
+    "gulp-uglify": "^2.0.0",
+    "html-webpack-plugin": "^2.24.1",
+    "jasmine-core": "^2.5.2",
+    "karma": "^1.3.0",
+    "karma-jasmine": "^1.0.2",
+    "karma-phantomjs-launcher": "^1.0.2",
+    "phantomjs": "^2.1.7+deprecated",
+    "selenium-webdriver": "^3.0.1",
+    "supertest": "^2.0.1",
+    "webpack": "^1.13.3"
   }
 }
