--- a/KOA2/package.json
+++ b/KOA2/package.json
@@ -4,12 +4,15 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "babel-index": "babel -w app.es -o app.js",
-    "babel-ajax": "babel -w index.js -o index-o.js",
-    "start": "forever -w app.js && babel-ajax && babel-index"
+    "unit": "karma start",
+    "e2e": "ode ./test/e2e.js",
+    "servive": "mocha ./test/servive.js",
+    "test": "npm run unit && npm run e2e && mocha"
   },
   "dependencies": {
+    "axios": "^0.15.2",
     "co": "^4.6.0",
+    "jquery": "^3.1.1",
     "koa": "next",
     "koa-convert": "^1.2.0",
     "koa-simple-router": "^0.2.0",
@@ -28,6 +31,7 @@
     "babel-polyfill": "^6.16.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-stage-3": "^6.17.0",
+    "css-loader": "^0.25.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
@@ -37,8 +41,10 @@
     "karma": "^1.3.0",
     "karma-jasmine": "^1.0.2",
     "karma-phantomjs-launcher": "^1.0.2",
+    "less-loader": "^2.2.3",
     "phantomjs": "^2.1.7+deprecated",
     "selenium-webdriver": "^3.0.1",
+    "style-loader": "^0.13.1",
     "supertest": "^2.0.1",
     "webpack": "^1.13.3"
   }
